@@ -309,6 +309,7 @@ Hans de Graaff
 Eddy De Greef
 Duncan Grisby
 Fabian Groffen
+John S. Gruber
 Dag Gruneau
 Filip Gruszczyński
 Michael Guravage
